--- a/fa2025/lectures/lecture-15.qmd
+++ b/fa2025/lectures/lecture-15.qmd
@@ -1,8 +1,30 @@
 ---
 date: '2025-10-13'
-discussion-items: []
+discussion-items:
+- options: target="_blank"
+  post_text: '- due 10/12, SUN'
+  topic: Homework 5 - Getting started with SQL
+  url: https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241137
+- options: target="_blank"
+  post_text: '- due 10/12, SUN'
+  topic: Practice Quiz 4 - SQL Basics
+  url: https://virginiacommonwealth.instructure.com/courses/122236/quizzes/232176
+- options: target="_blank"
+  post_text: '- due 10/19, SUN'
+  topic: Quiz 4 - SQL Basics
+  url: https://virginiacommonwealth.instructure.com/courses/122236/quizzes/232171
+- options: target="_blank"
+  post_text: '- due 10/19, SUN'
+  topic: Homework 6 - Creating a database
+  url: https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241138
 lecture-id: 15
-lecture-topics: []
+lecture-topics:
+- id: '112'
+  topic: Homework 5 - Setup Checklist
+  url: _homework-5-checklist-fa2025.qmd
+- id: '113'
+  topic: Getting to SELECT
+  url: _sql-selects.qmd
 title: Intro to SQL
 ---
 
@@ -16,6 +38,13 @@ this_file = 'lecture-15.qmd'
 
 <!-- lecture-block-begin -->
 
+# Homework 5 - Setup Checklist
+
+{{< include ../../topics/_homework-5-checklist-fa2025.qmd >}}
+
+# Getting to SELECT
+
+{{< include ../../topics/_sql-selects.qmd >}}
 <!-- lecture-block-end -->
 
 
