--- a/topics/_sql-selects.qmd
+++ b/topics/_sql-selects.qmd
@@ -291,6 +291,10 @@ FROM
 
 ```
 
+### Want to know more?
+
+* [See the full documentation for SELECT](https://dev.mysql.com/doc/refman/8.4/en/select.html)
+
 :::
 ::::
 
